fixing overflow

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -18,6 +18,7 @@
     margin: 5px;
     max-height: 250px;
     max-width: 200px;
+    overflow: hidden;
 }
 h1 {
 	display: inline-block;
